/*
 * Copyright 2020 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

// Data models for describing a scanning target.
syntax = "proto3";

package tsunami.proto;

import "network.proto";
import "network_service.proto";

option java_multiple_files = true;
option java_outer_classname = "ScanTargetProtos";
option java_package = "com.google.tsunami.proto";
option go_package = "github.com/google/tsunami-security-scanner/proto";

// The information about a scan target.
message ScanTarget {
  oneof target {
    // The network endpoint to be scanned.
    NetworkEndpoint network_endpoint = 1;
    // The network service to be scanned.
    NetworkService network_service = 2;
  }
}
